--- a/ram-style.css
+++ b/ram-style.css
@@ -13,10 +13,12 @@
 }
 
 .contentFixedElement img {
-    max-width: 100%;
+/*     max-width: 100%;
     height: 60vh;
     width: 100vw;
-    object-fit: cover;
+    object-fit: cover; */
+    max-height: 100vh;
+    width: auto;
     margin: 10vh 0;
 }
 
@@ -65,7 +67,7 @@
 }
 
 .contentFixedElement img {
-    height: inherit;
+/*     height: inherit; */
 }
 
 .content-img-fixed:nth-child(1) {
