--- a/ram-style.css
+++ b/ram-style.css
@@ -15,9 +15,9 @@
 .contentFixedElement img {
 /*     max-width: 100%;
     height: 60vh;
-    width: 100vw;*/
-    object-fit: cover; 
-    max-height: 100vh;
+    width: 100vw;
+    object-fit: cover; */
+    max-height: 70vh;
     width: auto;
     margin: 10vh 0;
 }
