--- a/ram-style.css
+++ b/ram-style.css
@@ -17,8 +17,8 @@
     height: 60vh;
     width: 100vw;
     object-fit: cover; */
-    max-height: 70vh;
-    width: auto;
+    max-height: 100vh !important;
+    width: auto !important;
     margin: 10vh 0;
 }
 
