--- a/ram-style.css
+++ b/ram-style.css
@@ -17,8 +17,8 @@
     height: 60vh;
     width: 100vw;
     object-fit: cover; */
-    max-height: 100vh !important;
-    width: auto !important;
+    max-height: 100vh;
+    width: auto;
     margin: 10vh 0;
 }
 
@@ -57,8 +57,8 @@
 }
 
 .content-img-fixed {
-    width: 100vw;
-    height: 95vh;
+/*     width: 100vw;
+    height: 95vh; */
     display: flex;
     align-items: center;
     justify-content: center;
