--- a/ram-style.css
+++ b/ram-style.css
@@ -57,8 +57,8 @@
 }
 
 .content-img-fixed {
-/*     width: 100vw;
-    height: 95vh; */
+/*     width: 100vw;*/
+    height: 95vh; 
     display: flex;
     align-items: center;
     justify-content: center;
