--- a/ram2.css
+++ b/ram2.css
@@ -13,7 +13,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    width: 90vw;
+    width: 100%;
     margin: 0 auto;
 }
 .content-img-fixed{
@@ -72,6 +72,8 @@
     position: fixed !important;
     top: 0 !important;
     bottom: inherit !important;
+    left: 0;
+    right: 0;
 }
 .absolute_bottom{
     position: absolute !important;
