--- a/ram5.css
+++ b/ram5.css
@@ -13,12 +13,12 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    width: 100%;
+    width: inherit;
     margin: 0 auto;
 }
 .content-img-fixed{
-    height: 100vh;
-    width: auto;
+    height: auto;
+    width: 100%;
     opacity: 0;
     transition: all 0.6s;
     position: absolute;
