--- a/ram8.css
+++ b/ram8.css
@@ -1,5 +1,5 @@
 .contentFixedElement{
-    width: 100%;
+    width: 1100px;
     margin: 0 auto;
     display: block;
     position: relative;
@@ -84,6 +84,9 @@
 }
 
 @media (max-width: 768px) {
+    .contentFixedElement{
+        width: 700px;
+    }
     .text-fixed p {
         margin: 0;
         padding: 20px;
@@ -95,6 +98,12 @@
         padding: 30px;
         font-size: 12px;
         line-height: 1.6;
+    }
+}
+
+@media (max-width: 320px){
+    .contentFixedElement{
+        width: 300px;
     }
 }
 
