--- a/ram9.css
+++ b/ram9.css
@@ -13,6 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-top: 60px;
     height: 100vh;
     width: inherit;
     margin: 0 auto;
