--- a/ram11.css
+++ b/ram11.css
@@ -23,7 +23,7 @@
     opacity: 0;
     transition: all 0.6s;
     position: absolute;
-    padding-top: 60px;
+    padding-top: 20vh;
 }
 .content-img-fixed:nth-child(1) {
     opacity: 1;
